# mongo_db_migrator

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: components.rs  main.rs  services.rs
src/components/: env_reader.rs
src/config/: app_config.rs
src/services/: db_migrator.rs
